fix content-box overflow-visible textwrap bug and imrove scrollbar dimensions accuracy

--- a/packages/overlayscrollbars/src/styles/structure.scss
+++ b/packages/overlayscrollbars/src/styles/structure.scss
@@ -126,6 +126,7 @@ html[data-overlayscrollbars] > body {
   flex: auto !important;
   height: auto;
   width: 100%;
+  min-width: 0;
   padding: 0;
   margin: 0;
   border: none;
